move to cleaner namespaces

--- a/cp2/Computing Project 2.ipynb
+++ b/cp2/Computing Project 2.ipynb
@@ -41,105 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"glowscript\" class=\"glowscript\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -151,11 +55,10 @@
     }
    ],
    "source": [
-    "from vpython import *     # import all vpython functions including numpy incompatible sin, cos, exp, etc\n",
-    "from numpy import *       # import all numpy compatible version of functions includign incompatible \"rate\"\n",
-    "from vpython import rate  # import vpython rate function to replace numpy version    \n",
+    "import vpython as vp     # import all vpython functions including numpy incompatible sin, cos, exp, etc\n",
+    "import numpy as np       # import all numpy compatible version of functions includign incompatible \"rate\"\n",
     "\n",
-    "x = array([1,9,4,3,5])\n",
+    "x = np.array([1,9,4,3,5])\n",
     "\n",
     "print(x)\n",
     "print(repr(x))\n",
@@ -177,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +92,7 @@
     }
    ],
    "source": [
-    "x = linspace(-pi, pi, 5)\n",
+    "x = np.linspace(-pi, pi, 5)\n",
     "print(x)\n"
    ]
   },
@@ -205,23 +108,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 9.8696044  2.4674011  0.         2.4674011  9.8696044]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -229,31 +115,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -1.00000000e+00   6.12323400e-17   1.00000000e+00   6.12323400e-17\n",
-      "  -1.00000000e+00]\n"
+      "[9.8696044 2.4674011 0.        2.4674011 9.8696044]\n"
      ]
     }
    ],
    "source": [
-    "print(cos(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ -1.22464680e-16  -1.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "   1.22464680e-16]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sin(x))"
+    "print(x**2)"
    ]
   },
   {
@@ -265,14 +132,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -1.00000000e+00 -1.22464680e-16j   6.12323400e-17 -1.00000000e+00j\n",
-      "   1.00000000e+00 +0.00000000e+00j   6.12323400e-17 +1.00000000e+00j\n",
-      "  -1.00000000e+00 +1.22464680e-16j]\n"
+      "[-1.000000e+00  6.123234e-17  1.000000e+00  6.123234e-17 -1.000000e+00]\n"
      ]
     }
    ],
    "source": [
-    "print(exp(1j*x))"
+    "print(np.cos(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.2246468e-16 -1.0000000e+00  0.0000000e+00  1.0000000e+00\n",
+      "  1.2246468e-16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sin(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.000000e+00-1.2246468e-16j  6.123234e-17-1.0000000e+00j\n",
+      "  1.000000e+00+0.0000000e+00j  6.123234e-17+1.0000000e+00j\n",
+      " -1.000000e+00+1.2246468e-16j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.exp(1j*x))"
    ]
   },
   {
@@ -298,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def SetArrowFromCN( cn, a):\n",
@@ -332,18 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -3.14159265359\n",
-      "1 -1.57079632679\n",
+      "0 -3.141592653589793\n",
+      "1 -1.5707963267948966\n",
       "2 0.0\n",
-      "3 1.57079632679\n",
-      "4 3.14159265359\n"
+      "3 1.5707963267948966\n",
+      "4 3.141592653589793\n"
      ]
     }
    ],
@@ -368,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,14 +280,14 @@
        "        1.73684211,  2.05263158,  2.36842105,  2.68421053,  3.        ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "L=6.0\n",
-    "x = linspace(-L/2, L/2, 20)\n",
+    "x = np.linspace(-L/2, L/2, 20)\n",
     "x"
    ]
   },
@@ -401,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +319,7 @@
     {
      "data": {
       "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -430,14 +330,14 @@
     }
    ],
    "source": [
-    "canvas()\n",
+    "vp.canvas()\n",
     "\n",
     "alist=[]\n",
     "for i in range(len(x)):\n",
-    "    a = arrow(pos=vec(x[i], 0, 0),     # on the y,z axis at location 'x'\n",
-    "                axis=vec(0,1,0),       # pointing in the 'real' direction\n",
-    "                color=color.red)    # make it red. ;->\n",
-    "    alist.append(a)                 # add to list"
+    "    a = vp.arrow(pos=vp.vec(x[i], 0, 0),  # on the y,z axis at location 'x'\n",
+    "                 axis=vp.vec(0,1,0),      # pointing in the 'real' direction\n",
+    "                 color=vp.color.red)      # make it red. ;->\n",
+    "    alist.append(a)                       # add to list"
    ]
   },
   {
@@ -465,32 +365,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -1.83697020e-16+1.j        ,  -4.75947393e-01+0.87947375j,\n",
-       "        -8.37166478e-01+0.54694816j,  -9.96584493e-01+0.08257935j,\n",
-       "        -9.15773327e-01-0.40169542j,  -6.14212713e-01-0.78914051j,\n",
-       "        -1.64594590e-01-0.9863613j ,   3.24699469e-01-0.94581724j,\n",
-       "         7.35723911e-01-0.67728157j,   9.69400266e-01-0.24548549j,\n",
-       "         9.69400266e-01+0.24548549j,   7.35723911e-01+0.67728157j,\n",
-       "         3.24699469e-01+0.94581724j,  -1.64594590e-01+0.9863613j ,\n",
-       "        -6.14212713e-01+0.78914051j,  -9.15773327e-01+0.40169542j,\n",
-       "        -9.96584493e-01-0.08257935j,  -8.37166478e-01-0.54694816j,\n",
-       "        -4.75947393e-01-0.87947375j,  -1.83697020e-16-1.j        ])"
+       "array([-1.83697020e-16+1.j        , -4.75947393e-01+0.87947375j,\n",
+       "       -8.37166478e-01+0.54694816j, -9.96584493e-01+0.08257935j,\n",
+       "       -9.15773327e-01-0.40169542j, -6.14212713e-01-0.78914051j,\n",
+       "       -1.64594590e-01-0.9863613j ,  3.24699469e-01-0.94581724j,\n",
+       "        7.35723911e-01-0.67728157j,  9.69400266e-01-0.24548549j,\n",
+       "        9.69400266e-01+0.24548549j,  7.35723911e-01+0.67728157j,\n",
+       "        3.24699469e-01+0.94581724j, -1.64594590e-01+0.9863613j ,\n",
+       "       -6.14212713e-01+0.78914051j, -9.15773327e-01+0.40169542j,\n",
+       "       -9.96584493e-01-0.08257935j, -8.37166478e-01-0.54694816j,\n",
+       "       -4.75947393e-01-0.87947375j, -1.83697020e-16-1.j        ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k=3*pi/L\n",
-    "psi=exp(1j*k*x)\n",
+    "k=3*np.pi/L\n",
+    "psi=np.exp(1j*k*x)\n",
     "psi"
    ]
   },
@@ -504,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +422,7 @@
     {
      "data": {
       "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -533,12 +433,12 @@
     }
    ],
    "source": [
-    "canvas()\n",
+    "vp.canvas()\n",
     "\n",
     "L=6.0                          # range of x is 6 units\n",
-    "x = linspace(-L/2, L/2, 20)    # from -3 to +3\n",
-    "k = 3*pi/L                     # set up the wave number\n",
-    "psi = exp(1j*k*x)              # set up the initial wave function\n",
+    "x = np.linspace(-L/2, L/2, 20)    # from -3 to +3\n",
+    "k = 3*np.pi/L                     # set up the wave number\n",
+    "psi = np.exp(1j*k*x)              # set up the initial wave function\n",
     "\n",
     "alist = []                     # an empty list for our arrow objects\n",
     "\n",
@@ -554,11 +454,11 @@
     "    a.axis.z = cn.imag\n",
     "\n",
     "for i in range(len(x)):\n",
-    "    a = arrow(pos=vec(x[i], 0, 0),  # on the y,z axis at location 'x'\n",
-    "                axis=vec(0,1,0),    # pointing in the 'real' direction\n",
-    "                color=color.red)    # make it red. ;->\n",
-    "    alist.append(a)                 # add to list\n",
-    "    SetArrowFromCN( psi[i], a)      # set up arrow from wave function"
+    "    a = vp.arrow(pos=vp.vec(x[i], 0, 0),  # on the y,z axis at location 'x'\n",
+    "                axis=vp.vec(0,1,0),       # pointing in the 'real' direction\n",
+    "                color=vp.color.red)       # make it red. ;->\n",
+    "    alist.append(a)                       # add to list\n",
+    "    SetArrowFromCN( psi[i], a)            # set up arrow from wave function"
    ]
   },
   {
@@ -578,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +496,7 @@
     {
      "data": {
       "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -607,14 +507,14 @@
     }
    ],
    "source": [
-    "canvas()  # open a new vpython window\n",
+    "vp.canvas()  # open a new vpython window\n",
     "\n",
-    "omega = 2*pi                   # 1 rev/sec\n",
-    "t=0.0                          # start t at zero\n",
-    "dt=0.01                        # 1/100 of a second per step\n",
+    "omega = 2*np.pi             # 1 rev/sec\n",
+    "t=0.0                       # start t at zero\n",
+    "dt=0.01                     # 1/100 of a second per step\n",
     "\n",
     "while 1:\n",
-    "    rate(100)\n",
+    "    vp.rate(100)\n",
     "    t+=dt\n",
     "    for i in range(len(x)):\n",
     "        #\n",
@@ -623,8 +523,7 @@
     "        #\n",
     "        pass # replace this with your code\n",
     "\n",
-    "    break # take this out when you put in your code!\n",
-    "    "
+    "    break # take this out when you put in your code!\n"
    ]
   },
   {
@@ -657,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
