--- a/cp3/Computing Project 3.ipynb
+++ b/cp3/Computing Project 3.ipynb
@@ -133,26 +133,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from vpython import *\n",
-    "canvas()\n",
+    "import vpython as vp\n",
+    "import numpy as np\n",
     "\n",
-    "gr = gcurve(color=color.red)\n",
+    "vp.canvas()\n",
+    "\n",
+    "gr = vp.gcurve(color=vp.color.red)\n",
     "\n",
     "A=10.0\n",
-    "s = sphere(pos=vec(A, 0, 0), color=color.blue)\n",
+    "s = vp.sphere(pos=vp.vec(A, 0, 0), color=vp.color.blue)\n",
     "t=0.0\n",
     "dt=0.03\n",
     "\n",
-    "scene.autoscale=False\n",
-    "while t<3*pi:\n",
-    "    rate(30)\n",
+    "vp.scene.autoscale=False\n",
+    "while t<3*np.pi:\n",
+    "    vp.rate(30)\n",
     "    t=t+dt\n",
-    "    s.pos.x = A*cos(t)\n",
+    "    s.pos.x = A*np.cos(t)\n",
     "    gr.plot(pos=(t, s.pos.x))\n"
    ]
   },
@@ -174,16 +174,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from vpython import *    #get \n",
-    "from numpy import *\n",
-    "from vpython import rate\n",
-    "\n",
-    "x = array([1,2,3,4])\n",
+    "x = np.array([1,2,3,4])\n",
     "print(x.sum())       # prints out the value \"10\"\n",
     "print(x**2)          # prints out \"[ 1  4  9 16]\"\n",
     "print((x**2).sum())  # prints out the value \"30\"\n"
@@ -199,12 +193,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x = array([1,2,3,4])\n",
+    "x = np.array([1,2,3,4])\n",
     "print(x[:2].sum())      # prints out the value \"3\"\n",
     "print(x[:2]**2)         # prints out \"[ 1  4]\"\n",
     "print((x[:2]**2).sum()) # prints out the value \"5\""
@@ -222,14 +214,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x = linspace(0, 6.0, 13)\n",
+    "x = np.linspace(0, 6.0, 13)\n",
     "print(\"phase:\",x)\n",
-    "psi = exp(1j*x)\n",
+    "psi = np.exp(1j*x)\n",
     "print(\"real part:\", psi.real)\n",
     "print(\"imag part:\", psi.imag)\n",
     "print((abs(psi)**2).sum())      # prints out the value \"13.0\"\n",
@@ -255,35 +245,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require.undef(\"nbextensions/vpython_libraries/glow.min\");}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require.undef(\"nbextensions/vpython_libraries/glowcomm\");}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");});}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");});}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") {require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");});}else{element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At t=0.0...\n",
+      "The probability of being on the left is: 0.9965601990196634\n",
+      "The probability of being on the right is: 0.003439800980336979\n",
+      "The total is: 1.0000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "#\n",
     "# \"Starter Code\" for Project 3. Most things are set up except for the time dependence of the WF\n",
     "#\n",
+    "import vpython as vp\n",
+    "import numpy as np\n",
     "\n",
-    "from vpython import *     # import all vpython functions including numpy incompatible sin, cos, exp, etc\n",
-    "from numpy import *       # import all numpy compatible version of functions includign incompatible \"rate\"\n",
-    "from vpython import rate  # import vpython rate function to replace numpy version    \n",
-    "\n",
-    "canvas()\n",
+    "vp.canvas()\n",
     "\n",
     "N=20                           # how many fourier coefficients?\n",
     "NA=40                          # how many arrows?\n",
     "NA2=int(NA/2)                  # halfway index (NA/2)\n",
     "a=1.0                          # range of x is 1 unit\n",
-    "x = linspace(0, a, NA)         # NA locations from 0 to a\n",
+    "x = np.linspace(0, a, NA)         # NA locations from 0 to a\n",
     "sleeptime=0.2                  # how long to sleep\n",
     "framerate=50                   # max framerate\n",
     "E_1=1.0                        # work in units of the ground state energy (i.e., E_2=4*E_1 etc.)\n",
     "hbar=1.0                       # work in units where hbar=1 (so omega_1 = E_1/hbar = 1.0)\n",
     "\n",
-    "n = arange(1,N+1)\n",
+    "n = np.arange(1,N+1)\n",
     "\n",
-    "coefs = (2.0/(n*pi))*(1.0-cos(n*pi/2.0)) # compute all the fourier coefficients in one go.\n",
+    "coefs = (1/n)*(1.0-np.cos(n*np.pi/2.0)) # compute all the fourier coefficients in one go.\n",
     "\n",
     "def SetArrowFromCN( cn, a):\n",
     "    \"\"\"\n",
@@ -297,23 +414,26 @@
     "    a.axis.z = cn.imag\n",
     "    a.axis.x = 0.0\n",
     "    \n",
-    "gr = gcurve(color=color.black)\n",
-    "gx = gcurve(color=color.blue)\n",
-    "gxp = gcurve(color=color.red)\n",
-    "gxm = gcurve(color=color.red)\n",
+    "gr = vp.gcurve(color=vp.color.black)\n",
+    "gx = vp.gcurve(color=vp.color.blue)\n",
+    "gxp = vp.gcurve(color=vp.color.red)\n",
+    "gxm = vp.gcurve(color=vp.color.red)\n",
     "\n",
-    "psi=zeros(len(x),complex)\n",
+    "psi=np.zeros(len(x),np.complex)\n",
     "\n",
     "for m in n:\n",
-    "    psi += coefs[m-1]*sqrt(2.0/a)*sin(m*pi*x/a)  # put together initial wavefuncton\n",
+    "    psi += coefs[m-1]*np.sqrt(2.0/a)*np.sin(m*np.pi*x/a)  # put together initial wavefuncton\n",
+    "\n",
+    "pTot = (abs(psi)**2).sum()\n",
+    "psi = psi/np.sqrt(pTot) # normalize!\n",
     "\n",
     "alist = []\n",
     "for i in range(NA):\n",
-    "    alist.append(arrow(pos=vec(6*(x[i]-(a/2.0)),0,0), shaftwidth=4*a/NA, color=color.red))\n",
+    "    alist.append(vp.arrow(pos=vp.vec(6*(x[i]-(a/2.0)),0,0), shaftwidth=4*a/NA, color=vp.color.red))\n",
     "    SetArrowFromCN(psi[i],alist[i])\n",
     "    \n",
     "pTot = (abs(psi)**2).sum()\n",
-    "psi = psi/sqrt(pTot) # normalize!\n",
+    "psi = psi/np.sqrt(pTot) # normalize!\n",
     "\n",
     "pLeft = (abs(psi[:NA2])**2).sum()\n",
     "pRight = (abs(psi[NA2:])**2).sum()\n",
@@ -324,58 +444,93 @@
     "print (\"The total is:\", pLeft + pRight)\n",
     "\n",
     "t = 0.0\n",
-    "dt = 2*pi/1000.0\n",
+    "dt = 2*np.pi/1000.0\n",
     "\n",
-    "print(\"Starting Condition\")\n",
-    "sleep(sleeptime)\n",
-    "\n",
-    "def DisplayWF(t):\n",
+    "def DisplayWF(t, scaleFactor=5):\n",
     "    \"\"\"\n",
     "    Update the display at a single timestep at time t. \n",
     "    \"\"\"\n",
-    "    psi=zeros(len(x),complex)\n",
+    "    psi=np.zeros(len(x),complex)\n",
     "    \n",
     "    for m in n:\n",
-    "        psi += coefs[m-1]*sqrt(2.0/a)*sin(m*pi*x/a) # add time dependence here!\n",
+    "        psi += coefs[m-1]*np.sin(m*np.pi*x/a) # add time dependence here!\n",
+    "        \n",
+    "    pTot = (abs(psi)**2).sum()\n",
+    "    psi = psi/np.sqrt(pTot) # normalize!\n",
     "    \n",
     "    for i in range(NA):\n",
-    "        SetArrowFromCN(psi[i], alist[i])             # update the arrows\n",
+    "        SetArrowFromCN(scaleFactor*psi[i], alist[i])             # update the arrows\n",
     "    \n",
     "    #\n",
     "    # now compute probabilities, expectation values, etc. and graph in this space\n",
-    "    #\n"
+    "    #\n",
+    "\n",
+    "DisplayWF(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Condition Click Toggle to begin\n",
+      "OK here we go!\n",
+      "Done with first step\n",
+      "OK! Keep going\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 0.0\n",
+    "dt = 2*np.pi/1000.0\n",
+    "\n",
+    "status = {'go':False}\n",
+    "\n",
+    "def Toggle(b):    \n",
+    "    status['go'] = not status['go']\n",
+    "\n",
+    "vp.button( bind=Toggle, text='Toggle' )\n",
+    "\n",
+    "print(\"Starting Condition Click Toggle to begin\")\n",
+    "\n",
+    "while status['go'] == False:\n",
+    "    vp.rate(framerate)\n",
+    "\n",
+    "print(\"OK here we go!\")\n",
+    "\n",
+    "while status['go'] and t<np.pi:\n",
+    "    vp.rate(framerate)\n",
+    "    DisplayWF(t)\n",
+    "    t+=dt\n",
+    "\n",
+    "print(\"Done with first step\")\n",
+    "status['go'] = False\n",
+    "\n",
+    "while status['go'] == False:\n",
+    "    vp.rate(framerate)\n",
+    "\n",
+    "print(\"OK! Keep going\")\n",
+    "\n",
+    "while status['go'] and t<2*np.pi:\n",
+    "    vp.rate(framerate)\n",
+    "    DisplayWF(t)\n",
+    "    t+=dt\n",
+    "\n",
+    "print(\"Done!\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "t = 0.0\n",
-    "dt = 2*pi/1000.0\n",
-    "\n",
-    "sleep(sleeptime)\n",
-    "print(\"Starting Condition\")\n",
-    "\n",
-    "while t<pi:\n",
-    "    rate(framerate)\n",
-    "    DisplayWF(t)\n",
-    "    t+=dt\n",
-    "    \n",
-    "sleep(sleeptime)\n",
-    "print(\"At t=pi\")\n",
-    "\n",
-    "while t<2*pi:\n",
-    "    rate(framerate)\n",
-    "    DisplayWF(t)\n",
-    "    t+=dt\n",
-    "\n",
-    "print(\"At t=2*pi\")\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -394,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
